--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(7, 1fr);
+    gap: 5px;
+    padding: 10px;
 }
 
 .coins {
