--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+body {
+    background-color: deepskyblue;
+}
+
+@font-face {
+    font-family: "Fancy font";
+    src: url(Eater-Regular.ttf);
+}
+
 #table {
     height: 600px;
     width: 700px;
@@ -32,4 +41,14 @@
     justify-content: space-between;
     margin: 20px;
     height: 20px;
+    text-align: center;
+}
+
+#points h2 {
+    font-family: Fancy font;
+}
+
+#frad {
+    text-align: center;
+    font-family: Fancy font;
 }
