--- a/index.css
+++ b/index.css
@@ -52,3 +52,9 @@ body {
     text-align: center;
     font-family: Fancy font;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+    font-family: Fancy font;
+}
